--- a/style/index.css
+++ b/style/index.css
@@ -1,48 +1,84 @@
 #hero {
-    height: 800px;
-    background-image: url("/images/games/pad.jpg");
-    background-position: center;
-    background-size: cover;
+  height: 800px;
+  width: 100%;
+  background-image: url("/images/games/pad.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 #hero-content {
-    width: 700px;
-    background-color: rgba(23, 22, 23, 0.725);
-    box-shadow: 2px 4px 8px rgb(28, 27, 27);
-    border-radius: 8px;
-    text-align: center;
-    padding: 50px 0;
-    margin: 0 auto;
-    position: relative;
-    top: 200px;
+  width: 700px;
+  background-color: rgba(23, 22, 23, 0.725);
+  box-shadow: 2px 4px 8px rgb(28, 27, 27);
+  border-radius: 8px;
+  text-align: center;
+  padding: 50px 0;
+  margin: 0 auto;
+  position: relative;
+  top: 200px;
 }
 
-#hero-content h1{
-    color: white;
-    text-transform: uppercase;
-    font-size: 30px;
-    font-family: "Raleway", sans-serif;
-    margin: 0;
+#hero-content h1 {
+  color: white;
+  text-transform: uppercase;
+  font-size: 30px;
+  font-family: "Raleway", sans-serif;
+  margin: 0;
 }
 
 #hero-content p {
-    color: white;
-    text-transform: uppercase;
-    font-size: 18px;
-    font-weight: 300;
-    margin-bottom: 32px;
+  color: white;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 300;
+  margin-bottom: 32px;
 }
 
-#hero-content a{
-    background-color: rgb(222, 140, 255);
-    color: black;
-    padding: 10px 20px;
-    font-size: 24px;
-    font-weight: bold;
-    border-radius: 6px;
-    box-shadow: 2px 4px 2px black;
+#hero-content a {
+  background-color: rgb(222, 140, 255);
+  color: black;
+  padding: 10px 20px;
+  font-size: 24px;
+  font-weight: bold;
+  border-radius: 6px;
+  box-shadow: 2px 4px 2px black;
 }
 
-#hero-content a:hover{
-    background-color: rgb(199, 113, 233);
+#hero-content a:hover {
+  background-color: rgb(199, 113, 233);
+  
+}
+
+#highlights {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+/*ul for games*/
+#games {
+  display: flex;
+  width: 90%;
+  padding: 0;
+  margin: auto;
+  list-style: none;
+  margin-bottom: 40px;
+  justify-content: center;
+  color: rgb(81, 30, 102);
+}
+.games {
+ margin: 0 10px;
+ padding: 10px;
+}
+
+.games p {
+  font-weight: 300px;
+}
+
+/*li elements*/
+.games img {
+  height: 200px;
+  width: 100%;
+  box-shadow: 2px 4px 8px rgb(49, 47, 47);
+  border-radius: 10px;
+  object-fit: cover;
 }
