--- a/style/index.css
+++ b/style/index.css
@@ -1,7 +1,7 @@
 #hero {
   height: 800px;
   width: 100%;
-  background-image: url("/images/games/pad.jpg");
+  background-image: url(../images/games/pad.jpg);
   background-position: center;
   background-size: cover;
 }
@@ -52,16 +52,16 @@
 #highlights {
   text-align: center;
   text-transform: uppercase;
+  background: linear-gradient(rgb(255,255,255), rgb(247, 237, 249));
 }
 
 /*ul for games*/
 #games {
   display: flex;
   width: 90%;
-  padding: 0;
+  padding-bottom: 10px;
   margin: auto;
   list-style: none;
-  margin-bottom: 40px;
   justify-content: center;
   color: rgb(81, 30, 102);
 }
