--- a/style/shared.css
+++ b/style/shared.css
@@ -18,14 +18,14 @@ header li {
   text-align: right;
 }
 
-header a{
-    padding: 12px;
+header a {
+  padding: 12px;
 }
 
-header a:hover{
-    color: rgb(0, 0, 0);
-    background-color: rgb(199, 113, 233);
-    font-weight: bold;
+header a:hover {
+  color: rgb(0, 0, 0);
+  background-color: rgb(199, 113, 233);
+  font-weight: bold;
 }
 
 a {
@@ -53,7 +53,7 @@ a {
 }
 
 #page-logo a:hover {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 h2 {
@@ -61,8 +61,25 @@ h2 {
   color: rgb(153, 77, 183);
 }
 
-footer{
+footer {
   height: 60px;
   width: 100%;
-  background-color:  rgb(153, 77, 183);
+  background: linear-gradient(rgb(104, 54, 124), rgb(87, 42, 105));
+}
+
+footer img {
+  height: 30px;
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  padding-top: 15px;
+  margin: 0;
+}
+
+footer li {
+  padding: 0px 10px;
 }
