--- a/style/index.css
+++ b/style/index.css
@@ -46,13 +46,12 @@
 
 #hero-content a:hover {
   background-color: rgb(199, 113, 233);
-  
 }
 
 #highlights {
   text-align: center;
   text-transform: uppercase;
-  background: linear-gradient(rgb(255,255,255), rgb(247, 237, 249));
+  background: linear-gradient(rgb(255, 255, 255), rgb(247, 237, 249));
 }
 
 /*ul for games*/
@@ -66,8 +65,8 @@
   color: rgb(81, 30, 102);
 }
 .games {
- margin: 0 10px;
- padding: 10px;
+  margin: 0 10px;
+  padding: 10px;
 }
 
 .games p {
