--- a/style/games.css
+++ b/style/games.css
@@ -2,20 +2,49 @@ body {
   background: linear-gradient(grey, rgb(102, 101, 101));
 }
 
+h2{
+    color: rgb(96,48,115);
+}
+
 #container {
   position: static;
 }
 
+main{
+    display: flex;
+    flex-direction: row;
+}
 main ul {
   list-style: none;
-  width: 800px;
+  width: 900px;
   margin: 0 auto;
 }
+
 main li {
     display: flex;
+    background-color: white;
+    box-shadow: 1px 2px 4px black;
+    border-radius: 5px;
+    overflow: hidden;
+    margin: 20px;
 }
+
 main li img {
   width: 300px;
-  height: 280px;
+  height: 300px;
   object-fit: cover;
+}
+
+.item-content {
+    padding: 15px;
+}
+
+.actions {
+text-align: right;
+}
+
+.actions a{
+ background-color: rgb(132, 73, 155);
+ padding: 5px;
+ border-radius: 4px;
 }
